# TernOS

./: .gitignore  .gitmodules  Cargo.toml  README.md  run-m5-idf.sh  run-m5-rust.sh  run-m5.sh
core/src/: application.rs  display.rs  image_viewer.rs  input.rs  lib.rs  render_policy.rs  runtime_host.rs
core/src/app/: book_reader.rs  home.rs  image_viewer.rs  settings.rs  system.rs
core/src/palm/: bitmap.rs  bootstrap.rs  controller.rs  font.rs  form_preview.rs  menu_preview.rs  mod.rs  runner.rs  runtime.rs  trap_stub.rs  ui.rs  ui_component.rs
core/src/palm/cpu/: core.rs  decode.rs  memory.rs  mod.rs
core/src/palm/cpu/ops/: alu.rs  arith.rs  branch.rs  extra.rs  flow.rs  logic.rs  misc.rs  mod.rs  move_ops.rs  movem.rs  muldiv.rs  quick.rs  shiftmem.rs  system.rs  xops.rs
core/src/palm/traps/: dm.rs  mod.rs  table.rs  tbl.rs  win.rs
core/src/palm_db/: catalog.rs  install.rs  mod.rs  types.rs
core/src/platform/: mod.rs
core/src/prc_app/: bitmap.rs  bootstrap.rs  compat.rs  controller.rs  font.rs  form_preview.rs  menu_preview.rs  mod.rs  prc.rs  runner.rs  runtime.rs  trap_stub.rs  ui.rs  ui_component.rs
core/src/prc_app/cpu/: core.rs  dispatch.rs  memory.rs  mod.rs
core/src/prc_app/cpu/ops/: alu.rs  arith.rs  branch.rs  cond.rs  extra.rs  flow.rs  logic.rs  misc.rs  move_ops.rs  movem.rs  muldiv.rs  quick.rs  shiftmem.rs  system.rs  xops.rs
core/src/prc_app/traps/: dm.rs  evt.rs  fnt.rs  frm.rs  mem.rs  mod.rs  sys.rs  table.rs  tbl.rs
core/src/ternos/: mod.rs
core/src/ternos/services/: state.rs
core/src/ternos/services/db/: catalog.rs  install.rs  mod.rs  record.rs  runtime.rs
core/src/ternos/ui/: event.rs  list_view.rs  mod.rs  popup_view.rs  prc_alert.rs  prc_components.rs  reader_view.rs  resource.rs  runtime.rs  table_view.rs  view.rs
core/src/ui/: mod.rs  prc_alert.rs  prc_components.rs
desktop/: build.rs
desktop/src/: display.rs  image_source.rs  main.rs
docs/: DataAndResourceManager.html  Field.html  Table.html  palmos.md  platform.md  ternos.md
m5paper/: Cargo.toml  build.rs  espflash.toml  sdkconfig.defaults
m5paper-idf/: Cargo.toml  README.md  build.rs
m5paper-idf/.cargo/: config.toml
m5paper-idf/components/m5paper_bridge/: CMakeLists.txt  m5paper_bridge.cpp
m5paper-idf/src/: ffi.rs  lib.rs
m5paper-rust/: Cargo.toml  espflash.toml
m5paper-rust/.cargo/: config.toml
m5paper-rust/components/m5paper_backend/: CMakeLists.txt  m5paper_backend.cpp  m5paper_backend.h
m5paper-rust/espidf/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
m5paper-rust/src/: allocator.rs  display.rs  ffi.rs  lib.rs  runtime_host.rs
m5paper/.cargo/: config.toml
m5paper/components/m5paper_backend/: m5paper_backend.cpp  m5paper_backend.h
m5paper/components/m5paper_bridge/: CMakeLists.txt  idf_component.yml  m5paper_bridge.cpp
m5paper/cshim/: README.md  m5paper_bridge.h  m5paper_bridge_stub.c
m5paper/espidf/main/: CMakeLists.txt  main.c
m5paper/src/: allocator.rs  display.rs  ffi.rs  hardware.rs  image_source.rs  lib.rs  main.rs  platform.rs  runtime_host.rs
tools/tern-prc-fonts/: Cargo.toml
tools/tern-prc-fonts/src/: main.rs
x4/: build.rs
x4/assets/fonts/: README.md
x4/src/: eink_display.rs  image_source.rs  input.rs  main.rs
