[package]
name = "tern-m5paper-idf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
esp-idf-sys = { version = "0.36" }

[build-dependencies]
embuild = "0.33"

[features]
default = []
cshim = []

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "workspace"
esp_idf_version = "tag:v5.3.2"
esp_idf_components = ["pthread", "m5paper_bridge"]
esp_idf_sdkconfig_defaults = ["m5paper-idf/sdkconfig.defaults"]

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["/Users/andrew/embedded/TernReader/m5paper-idf/components"]
