[package]
name = "tern-m5paper"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
tern_core = { path = "../core" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", features = ["esp32", "log-04", "unstable"] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", features = ["esp32", "log-04"] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", features = ["alloc", "embassy", "esp32", "log-04"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", features = ["internal-heap-stats"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal", default-features = false, features = ["esp32", "log-04", "uart"] }
embedded-hal = "1.0.0"
embassy-executor = "0.9.1"
embassy-time = "0.5.0"

[features]
default = []
cshim = []

[build-dependencies]
cc = "1.2"
